<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="menu_nutrition">Nutrition</string>
    <string name="menu_fitness">Fitness</string>
    <string name="menu_mind">Mind</string>
    <string name="menu_medical">Medical</string>

    <string name="menudrop_foodbank">FoodBank</string>
    <string name="menudrop_calfresh">CalFresh</string>
    <string name="menudrop_eop">EOP</string>
    <string name="menudrop_freefoodmap">#FREEFOOD map</string>
    <string name="menudrop_easyrecipe">Easy Recipe</string>
    <string name="menudrop_clas">CLAS</string>
    <string name="menudrop_caps">CAPS</string>
    <string name="menudrop_athletics">Athletics</string>
    <string name="menudrop_sexualhygiene">Wellness Dispenser</string>
</resources>
