<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:title="Profile" />

    </group>
    <item android:title="Nutrition">
        <menu>
            <item
                android:id="@+id/nav_foodbank"
                android:title="@string/menudrop_foodbank" />
            <item
                android:id="@+id/nav_calfresh"
                android:title="@string/menudrop_calfresh" />
            <item
                android:id="@+id/nav_eop"
                android:title="@string/menudrop_eop" />
            <item
                android:id="@+id/nav_freefoodmap"
                android:title="@string/menudrop_freefoodmap" />
            <item
                android:id="@+id/nav_easyrecipe"
                android:title="@string/menudrop_easyrecipe" />
        </menu>
    </item>

    <item android:title="Mindfulness">
        <menu>
            <item
                android:id="@+id/nav_clas"
                android:title="@string/menudrop_clas" />
            <item
                android:id="@+id/nav_caps"
                android:title="@string/menudrop_caps" />
        </menu>
    </item>
    <item android:title="Fitness">
        <menu>
            <item
                android:id="@+id/nav_athletics"
                android:title="@string/menudrop_athletics" />
        </menu>
    </item>
    <item android:title="Medical">
        <menu>
            <item
                android:id="@+id/nav_sexualhygiene"
                android:title="@string/menudrop_sexualhygiene" />
        </menu>
    </item>

</menu>
